# PythonPDB

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  build_docs.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: Working with PDB Structures in Pandas.doctree  modules.doctree  python_pdb.aligners.doctree  python_pdb.chemistry.doctree  python_pdb.comparisons.doctree  python_pdb.doctree  python_pdb.entities.doctree  python_pdb.formats.doctree  python_pdb.formats.pandas.doctree  python_pdb.formats.pdb.doctree  python_pdb.formats.residue.doctree  python_pdb.parsers.doctree  python_pdb.pdb_formats.doctree  python_pdb.records.doctree  python_pdb.residues.doctree
.github/workflows/: documentation.yml  release.yml  test-package.yml
_sources/source/: Working with PDB Structures in Pandas.ipynb.txt  modules.rst.txt  python_pdb.aligners.rst.txt  python_pdb.chemistry.rst.txt  python_pdb.comparisons.rst.txt  python_pdb.entities.rst.txt  python_pdb.formats.pandas.rst.txt  python_pdb.formats.pdb.rst.txt  python_pdb.formats.residue.rst.txt  python_pdb.formats.rst.txt  python_pdb.parsers.rst.txt  python_pdb.pdb_formats.rst.txt  python_pdb.records.rst.txt  python_pdb.residues.rst.txt  python_pdb.rst.txt
docs/: build_docs.sh  conf.py  index.rst
examples/: Working with PDB Structures in Pandas.ipynb
source/: Working with PDB Structures in Pandas.html  Working with PDB Structures in Pandas.ipynb  modules.html  python_pdb.aligners.html  python_pdb.chemistry.html  python_pdb.comparisons.html  python_pdb.entities.html  python_pdb.formats.html  python_pdb.formats.pandas.html  python_pdb.formats.pdb.html  python_pdb.formats.residue.html  python_pdb.html  python_pdb.parsers.html  python_pdb.pdb_formats.html  python_pdb.records.html  python_pdb.residues.html
src/python_pdb/: __init__.py  aligners.py  chemistry.py  comparisons.py  entities.py  parsers.py  pdb_formats.py  records.py
src/python_pdb/formats/: __init__.py  pandas.py  pdb.py  residue.py
tests/unit/: test_aligners.py  test_comparisons.py  test_entities.py  test_formats_pdb.py  test_parsers.py
