[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_pdb"
version = "0.0.0"
authors = [
    { name="Benjamin McMaster", email="benjamin.mcmaster@rdm.ox.ac.uk"}
]
readme = "README.md"
description = "Tools for working with Protein Data Bank Files"
requires-python = ">=3.10"
dependencies = [
    "pandas",
]

[project.optional-dependencies]
develop = [
    "flake8",
    "Flake8-pyproject",
    "isort",
    "pytest",
    "prysk[pytest-plugin]",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.flake8]
max-line-length = 120
exclude = "venv"

[tool.isort]
line_length = 120
